--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Lab 5 Website</title>
+</head>
+<body>
+  <h1>Hello from AWS!</h1>
+  <p>This is my lab 3 deployment test.</p>
+</body>
+</html>
