--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Lab 5 Website</title>
 </head>
 <body>
-  <h1>Hello from AWS!</h1>
-  <p>This is my lab 5 deployment test.</p>
+  <h1>AWS - Basic index.html file!</h1>
+  <p>Lab #5 Deployment Test.</p>
 </body>
 </html>
