--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1>AWS - Basic index.html file!</h1>
   <p>Lab #5 Deployment Test.</p>
+  <p>This is Bob. Bob is friends with Alice... test ABCDE.</p>
 </body>
 </html>
