Update paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>AWS - Basic index.html file!</h1>
-  <p>Lab #5 Deployment Test.</p>
+  <p>Lab #5 Deployment </p>
 </body>
 </html>
